[package]
name = "rust-aws-cassandra-example"
version = "0.1.0"
authors = ["albert"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Uuid support
uuid = { version = "0.8.1", features = ["v4"] }

# Apache Cassandra connector
cdrs = { version = "2.2.4", features = ["ssl"] }
cdrs_helpers_derive = "0.3.0"
openssl = "0.10"
openssl-sys = "0.9"